data/all_generated_tests/raw_wast_tests/nop_StackCorruption_98.wast
;; 9. **Test Description**: Place `nop` instructions inside a `try-catch` block around stack modifications. Trigger the exception condition and examine whether the stack maintains its state before `nop` after catching the exception, confirming that `nop` affects no stack operations.

(assert_invalid
  (module 
    (func (result i32) 
      (local i32) 
      try
        (i32.const 1)
        (i32.const 2)
        (throw 0)
      catch
        (nop)
        (local.get 0)
      end
    )
  )
  "type mismatch"
)